[gd_scene load_steps=3 format=3 uid="uid://xjsfuvl41fvn"]

[ext_resource type="Texture2D" uid="uid://cim3b0el5dsmn" path="res://effects/Blood-Download-PNG-585739243.png" id="1_6utkh"]
[ext_resource type="Script" path="res://effects/blood.gd" id="2_0ihwb"]

[node name="Blood" type="Sprite2D"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_6utkh")
offset = Vector2(20, -133.333)
script = ExtResource("2_0ihwb")

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
